# cheolsu-ai

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.local.yaml  pyproject.toml  sample.env  schemas.erd.json
.github/workflows/: dev.yml
app/: main.py
app/common/: config.py
app/controller/: __init__.py  base.py  character.py  chat.py
app/core/constant/openai/: enums.py  price.py
app/core/constant/role/: role.py
app/core/decorator/: __init__.py
app/core/decorator/cost/: __init__.py  chat.py
app/core/middleware/: __init__.py  logging.py
app/core/repository/: __init__.py  auth.py  base.py
app/core/utils/: auth.py  image.py
app/core/utils/aws/: __init__.py  base.py  s3.py  secrets_manager.py
app/database/mongodb/: session.py
app/database/mongodb/crud/: chat.py
app/database/mongodb/schema/: chat.py  image.py
app/database/mysql/: __init__.py  session.py  timestamp.py
app/database/mysql/schema/: __init__.py  auth.py  character.py  chat.py
app/database/redis/: __init__.py  session.py
app/database/redis/crud/: chat.py
app/database/redis/schema/: chat.py
app/factory/: __init__.py  auth.py  base.py  chat.py
app/model/: auth.py  chat.py
app/model/request/auth/: __init__.py  token.py  user.py
app/model/request/character/: __init__.py  image.py  info.py  prompt.py
app/model/request/chat/: __init__.py  message.py  room.py
app/model/response/: health.py
app/model/response/auth/: __init__.py  user.py
app/model/response/chat/: room.py  (+2 more)
app/repository/: __init__.py
app/repository/character/: __init__.py  image.py  info.py  prompt.py
app/repository/chat/: __init__.py  message.py  room.py
app/router/: __init__.py
app/router/v1/: __init__.py  auth.py  chat.py  health.py  test.py
app/service/: auth.py  base.py  character.py
app/service/chat/: message.py  room.py
docker/: dev.Dockerfile  local.Dockerfile
scripts/: local.startup.sh
(+38 files in other folders)
