[tool.poetry]
name = "cheolsu-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.47.1"
langchain = "^0.3.0"
pandas = "^2.2.3"
fastapi = "^0.115.0"
ddtrace = "^2.14.0"
langsmith = "^0.1.129"
pymongo = "^4.9.1"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
